#734: correct tests